--- a/R/quiz181128_Report_v2.Rmd
+++ b/R/quiz181128_Report_v2.Rmd
@@ -219,6 +219,17 @@ quiz1128_2$Q1_2 %>%
   kable(row.names = FALSE)
 ```
 
+#### 생일이 같은 날은 모두 며칠인가?
+
+```{r, echo = FALSE}
+quiz1128_2$Q1_2 %>%
+  `[`(index_dup_b) %>%
+  table %>%
+  as.matrix %>%
+  t %>%
+  ncol
+```
+
 #### 생일이 같은 사람은 몇 명 정도 기대되는가?
 
 ```{r, echo = FALSE}
@@ -234,7 +245,7 @@ $N$을 전체 인원이라 할 때, 기대 인원은 $N\times\{1- (\frac{364}{36
 무응답이거나 결석한 학생을 제외한 응답 인원 `r N1`명에 대하여 기대인원을 계산하면 `r N1 %>% E_N %>% round(1)`명,
 표준오차는 `r N1 %>% V_N %>% sqrt %>% round(1)`명으로 계산되어 관찰된 값이 그 범위 근처에 있음을 알 수 있다.
 
-##### 기대값의 계산
+##### 기대되는 인원
 
 ```{r, echo = FALSE}
 N1 %>% 
@@ -242,7 +253,7 @@ N1 %>%
   round(digits = 1)
 ```
 
-##### 표준오차의 계산
+##### 표준오차
 
 ```{r, echo = FALSE}
 N1 %>%
@@ -263,7 +274,7 @@ quiz1128$month %>%
   kable(align = "r")
 ```
 
-랜덤화 효과 검증
+랜덤화 효과
 
 ```{r, echo = FALSE}
 quiz1128$month %>%
